# mt-kahypar

./: .gitignore  CMakeLists.txt
config/: default_flow_preset.ini  default_preset.ini  fast_preset.ini  quality_preset.ini  shared_memory_context.ini  test_preset.ini
mt-kahypar/: CMakeLists.txt  definitions.h
mt-kahypar/application/: CMakeLists.txt  command_line_options.h  kahypar.cc
mt-kahypar/datastructures/: CMakeLists.txt  buffered_vector.h  concurrent_bucket_map.h  delta_partitioned_hypergraph.h  dynamic_hypergraph.h  dynamic_hypergraph_factory.h  ehash_table.h  em_hash_map.h  flow_network.h  gain_cache.h  hypergraph.h  hypergraph_common.h  partitioned_graph.h  partitioned_hypergraph.h  perfect_hash_table.h  priority_queue.h  shared_work_queue.h  sparse_map.h  static_hypergraph.cpp  static_hypergraph.h
mt-kahypar/datastructures/async/: .group_pool.h.swo  .group_pool.h.swp  group_pool.h
mt-kahypar/io/: command_line_options.cpp  csv_output.h  partitioning_output.h  sql_plottools_serializer.cpp  sql_plottools_serializer.h
mt-kahypar/parallel/: hold_barrier.h  memory_pool.h  message_queue.h  parallel_prefix_sum.h  queue.h  tbb_initializer.h  thread_pinning_observer.h  work_stack.h
mt-kahypar/partition/: context.cpp  context.h  context_enum_classes.cpp  context_enum_classes.h  factories.h  metrics.h  multilevel.cpp  multilevel.h  partitioner.cpp  partitioner.h
mt-kahypar/partition/coarsening/: community_coarsener.h  community_coarsener_base.h  i_coarsener.h  multilevel_coarsener.h  multilevel_coarsener_base.h  multilevel_uncoarsener.cpp  multilevel_vertex_pair_rater.h  nlevel_coarsener.h  nlevel_coarsener_base.h  uncoarsening.cpp
mt-kahypar/partition/initial_partitioning/: recursive_bisection_initial_partitioner.h  recursive_initial_partitioner.cpp  recursive_initial_partitioner.h
mt-kahypar/partition/preprocessing/sparsification/: large_he_remover.h  low_degree_hn_remover.h
mt-kahypar/partition/refinement/: CMakeLists.txt  flow_refiner.h  label_propagation_refiner.h
mt-kahypar/partition/refinement/flow/: flow_refiner.h  flow_region_build_policy.h  maximum_flow.h  most_balanced_minimum_cut.h  one_round_scheduler.h  quotient_graph_block_scheduler.h  strongly_connected_components.h
mt-kahypar/partition/refinement/flow/external_maximum_flow/bk/: graph.h
mt-kahypar/partition/refinement/flow/external_maximum_flow/ibfs/: ibfs.h
mt-kahypar/partition/refinement/flows/: scheduler.cpp  scheduler.h
mt-kahypar/partition/refinement/fm/: fm_commons.h  global_rollback.cpp  local_search_scheduler.cpp  local_search_scheduler.h  localized_kway_fm_core.cpp  localized_kway_fm_core.h  multitry_kway_fm.cpp  multitry_kway_fm.h  scheduler_localized_kway_fm_core.cpp  scheduler_localized_kway_fm_core.h  stop_rule.h
mt-kahypar/partition/refinement/fm/strategies/: gain_cache_on_demand_strategy.h  gain_cache_strategy.h  gain_delta_strategy.h  recompute_gain_strategy.h
mt-kahypar/partition/refinement/greedy/: greedy_refiner.cpp  greedy_refiner.h  greedy_shared_data.h  kway_greedy.cpp  kway_greedy.h  localized_kway_greedy.cpp  localized_kway_greedy.h
mt-kahypar/partition/refinement/label_propagation/: label_propagation_refiner.cpp  label_propagation_refiner.h
mt-kahypar/partition/refinement/node_swapper/: node_swapper.cpp  node_swapper.h
mt-kahypar/partition/registries/: register_memory_pool.cpp  register_memory_pool.h  register_refinement_algorithms.cpp  register_refinement_algorithms.h
mt-kahypar/utils/: refinement_stats.h  stats.h
tests/datastructures/: CMakeLists.txt  flow_network_test.cc  gain_updates_test.cc  perfect_hash_table_test.cc
tests/io/: sql_plottools_serializer_test.cc
tests/partition/: partitioner_test.cc
tests/partition/coarsening/: coarsener_test.cc  multilevel_coarsener_test.cc
tests/partition/initial_partitioning/: initial_partitioner_test.cc
tests/partition/refinement/: CMakeLists.txt  flow_refiner_test.cc  label_propagation_refiner_test.cc  scheduler_test.cc
