message(STATUS "app CS:" ${CMAKE_CURRENT_SOURCE_DIR})
message(STATUS "app CL:" ${CMAKE_CURRENT_LIST_DIR})

add_library(MtKaHyParStrongAsync INTERFACE )
target_include_directories(MtKaHyParStrongAsync INTERFACE ../../external_tools/kahypar)
target_include_directories(MtKaHyParStrongAsync INTERFACE ../../)

target_sources(MtKaHyParStrongAsync INTERFACE kahypar.cc)
target_link_libraries(MtKaHyParStrongAsync INTERFACE  ${Boost_LIBRARIES})
target_link_libraries(MtKaHyParStrongAsync INTERFACE  pthread tbb)
#set_property(TARGET MtKaHyParStrongAsync PROPERTY CXX_STANDARD 17)
#set_property(TARGET MtKaHyParStrongAsync PROPERTY CXX_STANDARD_REQUIRED ON)
target_compile_definitions(MtKaHyParStrongAsync INTERFACE  USE_STRONG_PARTITIONER)
target_compile_definitions(MtKaHyParStrongAsync INTERFACE  USE_ASYNC_UNCOARSENING)

if(ENABLE_PROFILE MATCHES ON)
	target_link_libraries(MtKaHyParStrongAsync INTERFACE ${PROFILE_FLAGS})
endif()

add_executable(MtKaHyParMqRandomC4)
target_link_libraries(MtKaHyParMqRandomC4 PRIVATE MtKaHyParStrongAsync mq_random benchmark_base)
target_compile_definitions(MtKaHyParMqRandomC4 PRIVATE MQ_C=4)

add_executable(MtKaHyParMqStickyC4K4)
target_link_libraries(MtKaHyParMqStickyC4K4 PRIVATE MtKaHyParStrongAsync mq_sticky benchmark_base)
target_compile_definitions(MtKaHyParMqStickyC4K4 PRIVATE MQ_C=4 MQ_STICKINESS=4)

add_executable(MtKaHyParMqStickyC8K8)
target_link_libraries(MtKaHyParMqStickyC8K8 PRIVATE MtKaHyParStrongAsync mq_sticky benchmark_base)
target_compile_definitions(MtKaHyParMqStickyC8K8 PRIVATE MQ_C=8 MQ_STICKINESS=8)

add_executable(MtKaHyParMqSwappingC3K4)
target_link_libraries(MtKaHyParMqSwappingC3K4 PRIVATE MtKaHyParStrongAsync mq_swapping benchmark_base)
target_compile_definitions(MtKaHyParMqSwappingC3K4 PRIVATE MQ_C=3 MQ_STICKINESS=4)

add_executable(MtKaHyParMqSwappingC3K16)
target_link_libraries(MtKaHyParMqSwappingC3K16 PRIVATE MtKaHyParStrongAsync mq_swapping benchmark_base)
target_compile_definitions(MtKaHyParMqSwappingC3K16 PRIVATE MQ_C=3 MQ_STICKINESS=16)

add_executable(MtKaHyParCapq)
target_link_libraries(MtKaHyParCapq PRIVATE MtKaHyParStrongAsync capq benchmark_base)
target_compile_features(MtKaHyParCapq INTERFACE cxx_std_17)

add_executable(MtKaHyParKlsm256)
target_link_libraries(MtKaHyParKlsm256 PRIVATE MtKaHyParStrongAsync klsm256 benchmark_base)
target_compile_features(MtKaHyParKlsm256 INTERFACE cxx_std_17)

add_executable(MtKaHyParKlsm1024)
target_link_libraries(MtKaHyParKlsm1024 PRIVATE MtKaHyParStrongAsync klsm1024 benchmark_base)
target_compile_features(MtKaHyParKlsm1024 INTERFACE cxx_std_17)

add_executable(MtKaHyParKlsm4096)
target_link_libraries(MtKaHyParKlsm4096 PRIVATE MtKaHyParStrongAsync klsm4096 benchmark_base)
target_compile_features(MtKaHyParKlsm4096 INTERFACE cxx_std_17)

add_executable(MtKaHyParTbbPq)
target_link_libraries(MtKaHyParTbbPq PRIVATE MtKaHyParStrongAsync tbb_pq benchmark_base)
target_compile_features(MtKaHyParTbbPq INTERFACE cxx_std_17)

add_executable(MtKaHyParLinden)
target_link_libraries(MtKaHyParLinden PRIVATE MtKaHyParStrongAsync linden benchmark_base)
target_compile_features(MtKaHyParLinden INTERFACE cxx_std_17)

add_executable(MtKaHyParSpraylist)
target_link_libraries(MtKaHyParSpraylist PRIVATE MtKaHyParStrongAsync spraylist benchmark_base)
target_compile_features(MtKaHyParSpraylist INTERFACE cxx_std_17)

list(APPEND TARGETS_WANTING_ALL_SOURCES MtKaHyParMqRandomC4 MtKaHyParMqStickyC4K4 MtKaHyParMqStickyC8K8 MtKaHyParMqSwappingC3K4 MtKaHyParMqSwappingC3K16 MtKaHyParCapq MtKaHyParKlsm256 MtKaHyParKlsm1024 MtKaHyParKlsm4096 MtKaHyParTbbPq MtKaHyParLinden MtKaHyParSpraylist)
set(TARGETS_WANTING_ALL_SOURCES ${TARGETS_WANTING_ALL_SOURCES} PARENT_SCOPE)
